<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/payments"
            android:title="@string/nav_payment" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contacts"
            android:title="@string/nav_contacts" />
        <item
            android:id="@+id/nav_organization"
            android:icon="@drawable/organizations"
            android:title="@string/nav_organization" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/accounts"
            android:title="@string/nav_account" />
    </group>

    <item android:title="@string/nav_logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>